# Summer-25Project

./: .gitignore  README.md  calculateEma.py  calculateMACD_TWOOOOOOOOOP.py  main.py  nvda_sentiment_feb2025-2.ipynb  pyproject.toml
Random/: testing.py
Sentiment Analysis/: RKLB_Sentiment.py  converted-utilshub.py  sentiment_analysis.py
Technical Analyisis/: .env  .env.exampe  TA.py  caculateMACD.py  calculateAD.py  calculateAdTest.py  calculateEma.py  calculateOBV.py  calculateRSI.py  calculateVolume.py  callClosingPrices.py  loadToken.py  main.py  obv_signals.csv  sentiment_analysis.py  testing.py  testing2.py
backend/: .gitignore  main.py  price_data.pkl  pyproject.toml
backend/Random/: tickerList.py
backend/Sentiment Analysis/: Monte_Carlo_Simulations.py  NVDA_Sentiment(2).py  NVDA_Sentiment(3).py  loadToken.py
backend/Technical Analyisis/: calculateVolume.py
backend/TechnicalAnalysis/: TA.py  calculateEma.py  callClosingPrices.py  obv_signals.csv
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  ComboBox.tsx  EMAPull.tsx  TickerPull.tsx  TickerSelectBox.css  TickerSelectBox.tsx  TopBar.tsx  tickers.ts
frontend/src/lib/: EMAPull.tsx  configs.ts
frontend/src/tickerSelect/: TickerCard.module.css  TickerCard.tsx  TickerList.tsx  TickerSelect.css  TickerSelect.tsx  tickersZodObject.ts
