
[project]
name = "summer-25-project"
version = "2020.0.0"
dependencies = [
    "pytz",
    "dotenv",
    "polygon-api-client",
    "matplotlib",
    "Django==5.2.4",
    "flask-restful",
    "flask",
]
requires-python = ">=3.9"
authors = [
    { name = "Anshika Singh" },
    { name = "Colin Berry" },
    { name = "Dylan Myers" },
]
